# cs39aa_nlp_project

./: .gitignore  README.md  pokemon_type_predictor.ipynb  pyproject.toml
